networkpolicy/netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: public-http
  namespace: default
spec:
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          dest: 'public'
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8080 
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          dest: 'public'
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8080
